test/tasty/neg-full-circle/src-3-app/TestExperimentalDefsPre.check
-- Error: TestExperimentalDefsPre_fail.scala:1:18
1 |import downstream.ExperimentalDefsPre.*
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |object ExperimentalDefsPre is marked @experimental and therefore may only be used in an experimental scope.
-- Error: TestExperimentalDefsPre_fail.scala:4:10
4 |  def test = new SubExperimentalNotExperimental
  |          ^
  |object ExperimentalDefsPre is marked @experimental and therefore may only be used in an experimental scope.
-- Error: TestExperimentalDefsPre_fail.scala:4:17
4 |  def test = new SubExperimentalNotExperimental
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |object ExperimentalDefsPre is marked @experimental and therefore may only be used in an experimental scope.
-- Error: TestExperimentalDefsPre_fail.scala:6:35
6 |  class SubSubExperimental extends SubExperimentalNotExperimental
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |object ExperimentalDefsPre is marked @experimental and therefore may only be used in an experimental scope.
4 errors found
